--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -31,12 +31,22 @@ tr > td.first-last-col{
 tr.rest-rows > td{
   width: 50px;
   height: 50px;
+  text-align: center;
+  font-size: 25px;
 }
 
 td.col-w {
-  background-color: white;
+  background-color: yellow;
 }
 
 td.col-b {
-  background-color: black;
+  background-color: red;
+}
+
+tr.button-row{
+  height: 50px;
+  width: 50px;
+}
+tr.button-row >td{
+  text-align: center;
 }
