--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -10,38 +10,44 @@ body{
 
 table {
   border: 2px;
-
+  width: 100%;
 }
 
-tr.first-last-row {
-  height: 10px;
-  width: 50px;
-  background-color: white;
-  text-align: center;
-}
-
-tr.first-last-row > td{
-  text-align: center;
-}
-
-tr.rest-rows{
-  height: 50px;
-  width: 50px;
+td{
+  width: 10%;
+  padding-bottom: 10%;
 }
 
 
-tr > td.first-last-col{
-  width: 50px;
-  background-color: white;
-  text-align: center;
-}
-
-tr.rest-rows > td{
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  font-size: 25px;
-}
+// tr.first-last-row {
+//   height: 10px;
+//   width: 50px;
+//   background-color: white;
+//   text-align: center;
+// }
+//
+// tr.first-last-row > td{
+//   text-align: center;
+// }
+//
+// tr.rest-rows{
+//   height: 50px;
+//   width: 50px;
+// }
+//
+//
+// tr > td.first-last-col{
+//   width: 50px;
+//   background-color: white;
+//   text-align: center;
+// }
+//
+// tr.rest-rows > td{
+//   width: 50px;
+//   height: 50px;
+//   text-align: center;
+//   font-size: 25px;
+// }
 
 td.col-w {
   background-color: yellow;
