--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -16,6 +16,9 @@ td{
   width: 10%;
   padding-bottom: 10%;
 }
+//.rest-rows1 td:nth-child(1,3,5,7){
+//background-color:yellow
+//}
 
 td.col-w {
   background-color: yellow;
@@ -32,6 +35,9 @@ nav.button-row{
 
 
 
+
+
+// i don't need that any more
 // tr.first-last-row {
 //   height: 10px;
 //   width: 50px;
