--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -1,10 +1,18 @@
 body{
   width: 100%;
+  background-color: #e5e5ff;
+  font-family: Lato;
 }
 
 #container{
   width: 50%;
   margin: 0 auto;
+}
+h1{
+  font-size: 2em;
+  margin-left: 12%;
+  font-family: Lato;
+  font-weight: 300;
 }
 
 table {
@@ -14,25 +22,84 @@ table {
 
 td{
   width: 10%;
-  padding-bottom: 10%;
+  height: 70px;
+  font-size: 2em;
+  @extend .clearfix;
+  position: relative;
 }
 //.rest-rows1 td:nth-child(1,3,5,7){
 //background-color:yellow
 //}
 
 td.col-w {
-  background-color: yellow;
+  background-color: #e5ccff;
+  //align-content: center;
 }
 
+
 td.col-b {
-  background-color: red;
+  background-color: #9933ff;
+}
+
+th{
+  font-size: 2em;
 }
 
 nav.button-row{
-  width:50%;
-  margin: 0 auto;
+  width:70%;
+  margin-left: 22%
 }
 
+//BLACK PIECES
+.bRook::before{
+  content: "\265C";
+  align-content: center;
+}
+
+.bKnight:before{
+  content:"\265E";
+}
+
+.bBishop::before{
+  content: "\265D";
+}
+
+.bQueen::before{
+  content: '\265B';
+}
+
+.bKing::before{
+  content: '\265A';
+}
+
+.bPawn::before{
+  content: '\265F';
+}
+
+//WHITE PIECES
+.wPawn::before{
+  content: '\2659';
+}
+
+.wRook::before{
+  content: '\2656';
+}
+
+.wKnight::before{
+  content: '\2658';
+}
+
+.wBishop::before{
+  content: '\2657';
+}
+
+.wQueen::before{
+  content: '\2655';
+}
+
+.wKing::before{
+  content: '\2654';
+}
 
 
 
@@ -67,3 +134,25 @@ nav.button-row{
 //   text-align: center;
 //   font-size: 25px;
 // }
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
+}
