--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -5,26 +5,51 @@ body{
 }
 
 #container{
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
+  @extend .clearfix;
 }
 h1{
   font-size: 2em;
-  margin-left: 12%;
+  margin-left: 20%;
   font-family: Lato;
   font-weight: 300;
 }
 
+.info{
+  width: 40%;
+  @extend .clearfix;
+  display: inline-block;
+  margin-left: 8%;
+  margin-top: 7.5em;
+}
+
+.table-nav{
+  width: 45%;
+  float: right;
+  @extend .clearfix;
+  display: inline-block;
+  align-items: center;
+  margin-top: 2em;
+  margin-right: 4%;
+
+
+}
+
 table {
   border: 2px;
-  width: 100%;
+  width: 90%;
+  display: inline-block;
+  float: right;
+  //margin-left: 25%;
+  //margin-right: 25%;
 }
 
 td{
-  width: 10%;
-  height: 70px;
+  width: 10.5%;
+  height: 40px;
   font-size: 2em;
-  @extend .clearfix;
+  //@extend .clearfix;
   position: relative;
 }
 //.rest-rows1 td:nth-child(1,3,5,7){
@@ -45,12 +70,26 @@ th{
   font-size: 2em;
 }
 
-nav.button-row{
-  width:70%;
-  margin-left: 22%
+.button-row{
+  margin-left: 15%;
+  margin-bottom: 30px;
+  button{
+    background-color: #e5e5ff;
+    border-radius: 5px;
+  }
+  //align-items: center;
+  //float: right;
+  //width:70%;
+  //margin-left: 22%
 }
 
+
 //BLACK PIECES
+
+// .P::before{
+//   content: '\265F';
+// }
+
 .bRook::before{
   content: "\265C";
   align-content: center;
@@ -73,7 +112,7 @@ nav.button-row{
 }
 
 .bPawn::before{
-  content: '\265F';
+  content: "\265F";
 }
 
 //WHITE PIECES
