--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -39,67 +39,48 @@ h1{
   align-items: center;
   margin-top: 2em;
   margin-right: 4%;
-
-
 }
+.button-row{
+  margin-left: 27%;
+  margin-bottom: 30px;
+  button{
+    background-color: $darkblue;
+    border-radius: 5px;
+  }
+}
+
 
 table {
   border: 2px;
   width: 90%;
   display: inline-block;
   float: right;
-  //margin-left: 25%;
-  //margin-right: 25%;
 }
 
-.first-last-row{
+.first-last-col, .first-last-row{
   text-align: center;
-  font-size: 11px;
+  font-size: 1em;
   font-weight: bolder;
-}
-.first-last-col{
-  font-size: 1.5em;
-  font-weight: bolder;
-  padding-left: 3px;
 }
 
-td{
+td, th{
+  padding-left: 7px;
+}
+
+
+tbody td{
   width: 10.5%;
   height: 40px;
   font-size: 2em;
-  //font-weight: 400;
-  //@extend .clearfix;
   position: relative;
 }
-//.rest-rows1 td:nth-child(1,3,5,7){
-//background-color:yellow
-//}
 
 td.col-w {
   background-color: $lightblue;
-  //align-content: center;
 }
-
 
 td.col-b {
   background-color: $darkblue;
-}
-
-th{
-  font-size: 2em;
-}
-
-.button-row{
-  margin-left: 29%;
-  margin-bottom: 30px;
-  button{
-    background-color: $darkblue;
-    border-radius: 5px;
-  }
-  //align-items: center;
-  //float: right;
-  //width:70%;
-  //margin-left: 22%
 }
 
 
@@ -159,39 +140,68 @@ th{
   content: '\2654';
 }
 
+@media (max-width: 767px) {           //MOBILE
+h1{
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.info, table{
+  width: 96%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 10px;
+}
+.table-nav{
+  width: 100%;
+}
+.button-row{
+  margin-left: 13%;
+  button{
+    width: 5em;
+  }
+}
+
+table{
+  float: left;
+}
+
+
+}
+
+@media (max-width: 1024px) and (min-width: 768px){      //TABLET
+  .info, table{
+    width: 96%;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 10px;
+  }
+  .table-nav{
+    width: 80%;
+  }
+  .button-row{
+    width: 90%;
+    margin-left: 0%;
+    button{
+      width: 8em;
+    }
+
+  }
+
+  table{
+    float: left;
+
+  }
+
+
+}
 
 
 
-// i don't need that any more
-// tr.first-last-row {
-//   height: 10px;
-//   width: 50px;
-//   background-color: white;
-//   text-align: center;
-// }
-//
-// tr.first-last-row > td{
-//   text-align: center;
-// }
-//
-// tr.rest-rows{
-//   height: 50px;
-//   width: 50px;
-// }
-//
-//
-// tr > td.first-last-col{
-//   width: 50px;
-//   background-color: white;
-//   text-align: center;
-// }
-//
-// tr.rest-rows > td{
-//   width: 50px;
-//   height: 50px;
-//   text-align: center;
-//   font-size: 25px;
-// }
+
+
+
+
 
 /*
  * Clearfix: contain floats
