--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -18,7 +18,8 @@ body{
 }
 h1{
   font-size: 2em;
-  margin-left: 20%;
+  //margin-left: 20%;
+  text-align: center;
   font-family: Lato;
   font-weight: 300;
 }
@@ -35,13 +36,15 @@ h1{
   width: 45%;
   float: right;
   @extend .clearfix;
-  display: inline-block;
+  //display: inline-block;
   align-items: center;
-  margin-top: 2em;
-  margin-right: 4%;
+  //margin-top: 1em;
+  //margin-right: 4%;
 }
 .button-row{
-  margin-left: 27%;
+  display: flex;
+  justify-content: center;
+    //margin-left: 27%;
   margin-bottom: 30px;
   button{
     background-color: $darkblue;
@@ -69,10 +72,10 @@ td, th{
 
 
 tbody td{
-  width: 10.5%;
-  height: 40px;
+  width: 11.5%;
+  height: 50px;
   font-size: 2em;
-  position: relative;
+  //position: relative;
 }
 
 td.col-w {
@@ -156,7 +159,6 @@ h1{
   width: 100%;
 }
 .button-row{
-  margin-left: 13%;
   button{
     width: 5em;
   }
@@ -165,19 +167,27 @@ h1{
 table{
   float: left;
 }
-
+tbody td{
+  height: 43px;
+  font-size: 25px;
+}
 
 }
 
 @media (max-width: 1024px) and (min-width: 768px){      //TABLET
-  .info, table{
+  .info{
     width: 96%;
     margin-left: 2%;
     margin-right: 2%;
     margin-top: 10px;
   }
   .table-nav{
-    width: 80%;
+    width: 100%;
+    margin-top: 80px;
+    //display: flex;
+    //justify-content: center;
+    //flex-direction: column;
+    //align-items: center;
   }
   .button-row{
     width: 90%;
@@ -185,11 +195,6 @@ table{
     button{
       width: 8em;
     }
-
-  }
-
-  table{
-    float: left;
 
   }
 
