--- a/Chessboard/css/main.css
+++ b/Chessboard/css/main.css
@@ -30,8 +30,13 @@ h1 {
   justify-content: center;
   margin-bottom: 30px; }
   .button-row button {
-    background-color: #00BFFF;
-    border-radius: 5px; }
+    background-color: #F5F5F5;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    border: solid 1px #000080;
+    color: #000080;
+    outline: 0; }
 
 table {
   border: 2px;
@@ -108,7 +113,8 @@ td.col-b {
   .table-nav {
     width: 100%; }
   .button-row button {
-    width: 5em; }
+    width: 5em;
+    height: 5em; }
   table {
     float: left; }
   tbody td {
@@ -129,10 +135,13 @@ td.col-b {
     flex-direction: column;
     align-items: center; }
   .button-row {
-    width: 90%;
+    width: 100%;
     margin-left: 0%; }
     .button-row button {
-      width: 8em; } }
+      width: 6em;
+      height: 6em; }
+  table {
+    width: 63%; } }
 
 /*
  * Clearfix: contain floats
