--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -47,9 +47,14 @@ h1{
     //margin-left: 27%;
   margin-bottom: 30px;
   button{
-    background-color: $darkblue;
-    border-radius: 5px;
-  }
+    background-color: $background;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    border: solid 1px $text;
+    color: $text;
+    outline: 0;
+ }
 }
 
 
@@ -161,6 +166,7 @@ h1{
 .button-row{
   button{
     width: 5em;
+    height: 5em;
   }
 }
 
@@ -184,18 +190,22 @@ tbody td{
   .table-nav{
     width: 100%;
     margin-top: 80px;
-    //display: flex;
-    //justify-content: center;
-    //flex-direction: column;
-    //align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
   .button-row{
-    width: 90%;
+    width: 100%;
     margin-left: 0%;
     button{
-      width: 8em;
+      width: 6em;
+      height: 6em;
     }
 
+  }
+  table{
+    width: 63%;
   }
 
 
