--- a/Chessboard/scss/main.scss
+++ b/Chessboard/scss/main.scss
@@ -21,7 +21,7 @@ h1{
   //margin-left: 20%;
   text-align: center;
   font-family: Lato;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .info{
@@ -45,15 +45,18 @@ h1{
   display: flex;
   justify-content: center;
     //margin-left: 27%;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   button{
     background-color: $background;
     border-radius: 50%;
-    width: 48px;
-    height: 48px;
-    border: solid 1px $text;
+    width: 40px;
+    height: 40px;
+    border: solid 3px $text;
     color: $text;
     outline: 0;
+    .fa{
+      font-size: 2.5em;
+    }
  }
 }
 
